import org.gradle.api.tasks.testing.logging.TestLogEvent

buildscript {
    def PNI_VERSION = '21.0.0.15'
    ext.set("PNI_VERSION", PNI_VERSION)

    repositories {
        mavenLocal()
        mavenCentral()
    }
    dependencies {
        classpath group: 'io.vproxy', name: 'pni-exec', version: PNI_VERSION
    }
}

plugins {
    id 'java-library'
    id 'maven-publish'
    id 'signing'
    id 'me.champeau.jmh' version "0.7.1" apply false
}

def PNI_API_VERSION = project.PNI_VERSION

group = 'io.vproxy'
version = '1.0-SNAPSHOT'

repositories {
    mavenLocal()
    mavenCentral()
}

subprojects {
    apply plugin: 'java-library'

    group 'io.vproxy'
    version rootProject.version

    java {
        sourceCompatibility = '21'
        targetCompatibility = '21'
    }

    tasks.withType(JavaCompile) {
        options.encoding = "UTF-8"
        options.incremental = false
        options.compilerArgs += '--enable-preview'
    }
    tasks.withType(JavaExec) {
        jvmArgs += '--enable-preview'
        jvmArgs += '--enable-native-access=ALL-UNNAMED'
        javaLauncher.set(javaToolchains.launcherFor(java.toolchain))
    }
    tasks.withType(Test) {
        jvmArgs += '--enable-preview'
        jvmArgs += '--enable-native-access=ALL-UNNAMED'

        testLogging {
            showStandardStreams = true
            events TestLogEvent.FAILED, TestLogEvent.PASSED, TestLogEvent.SKIPPED, TestLogEvent.STARTED
            maxGranularity 100
            exceptionFormat "full"
            showCauses true
            showExceptions true
            showStackTraces true
        }
    }

    repositories {
        mavenLocal()
        mavenCentral()
    }

    task javadocJar(type: Jar) {
        archiveClassifier = 'javadoc'
        from "$buildDir/docs/javadoc"
    }

    tasks.withType(GenerateModuleMetadata) {
        enabled = false
    }
}

project(':template') {
    dependencies {
        implementation 'io.vproxy:pni-api-jdk21:' + PNI_API_VERSION
    }
    compileJava {
        options.compilerArgs += '-parameters'
    }
    task pniClean(type: Exec) {
        workingDir project.rootProject.rootDir.getAbsolutePath() + '/core/src/main/'
        commandLine 'bash', '-c', 'rm -rf c-generated/* && rm -rf generated/*'
    }
    task pniGenerate() {
        dependsOn compileJava

        def workingDir = project.rootProject.rootDir.getAbsolutePath()
        def gen = new io.vproxy.pni.exec.Generator(
            new io.vproxy.pni.exec.CompilerOptions()
                .setClasspath(List.of(workingDir + '/template/build/classes/java/main'))
                .setJavaOutputBaseDirectory(workingDir + '/core/src/main/generated')
                .setCOutputDirectory(workingDir + '/core/src/main/c-generated')
        )

        doLast {
            gen.generate()
        }
    }
    task pniCompile(type: Exec) {
        workingDir project.rootProject.rootDir.getAbsolutePath() + '/core/src/main/c'
        commandLine './make.sh'

        dependsOn pniGenerate
    }
}

project(':core') {
    sourceSets {
        main {
            java {
                srcDirs = ['src/main/java', 'src/main/generated']
            }
        }
    }
    dependencies {
        api 'io.vproxy:pni-api-jdk21:' + PNI_API_VERSION
    }
}

project(':tutorial-template') {
    compileJava {
        options.compilerArgs += '-parameters'
    }
    dependencies {
        implementation 'io.vproxy:pni-api-jdk21:' + PNI_API_VERSION
        implementation project(':template')
    }
    task pniCleanTutorial(type: Exec) {
        workingDir project.rootProject.rootDir.getAbsolutePath() + '/tutorial/src/main/'
        commandLine 'bash', '-c', 'rm -rf c-generated/* && rm -rf generated/*'
    }
    task pniGenerateTutorial() {
        def workingDir = project.rootProject.rootDir.getAbsolutePath()
        def gen = new io.vproxy.pni.exec.Generator(
            new io.vproxy.pni.exec.CompilerOptions()
                .setClasspath(List.of(
                    workingDir + '/tutorial-template/build/classes/java/main',
                    workingDir + '/template/build/classes/java/main'
                ))
                .setJavaOutputBaseDirectory(workingDir + '/tutorial/src/main/generated')
                .setCOutputDirectory(workingDir + '/tutorial/src/main/c-generated')
                .setFilters(List.of(
                    java.util.regex.Pattern.compile('io\\.vproxy\\.luajn\\.tutorial\\..*')
                ))
        )

        doLast {
            gen.generate()
        }

        dependsOn project(':template').tasks.pniGenerate
        dependsOn compileJava
    }
    task pniCompileTutorial(type: Exec) {
        workingDir project.rootProject.rootDir.getAbsolutePath() + '/tutorial/src/main/c'
        commandLine './make.sh'

        dependsOn project(':template').tasks.pniCompile
        dependsOn pniGenerateTutorial
    }
}

project(':tutorial') {
    sourceSets {
        main {
            java {
                srcDirs = ['src/main/java', 'src/main/generated']
            }
        }
    }
    dependencies {
        implementation project(':core')
    }
    task runTutorial(type: JavaExec) {
        standardInput = System.in

        classpath = sourceSets.main.runtimeClasspath
        environment("LUA_PATH", project.rootProject.rootDir.getAbsolutePath() + "/core/src/main/lua/?.lua")
        jvmArgs += '-Djava.library.path=' +
                project.rootProject.rootDir.getAbsolutePath() + '/core/src/main/c' +
                File.pathSeparator +
                project.rootProject.rootDir.getAbsolutePath() + '/tutorial/src/main/c' +
                File.pathSeparator +
                System.getenv("LUA_LD")
        def id = System.getProperty("id", "null")
        if (id.length() < 2) {
            id = "0" + id
        }
        mainClass = 'io.vproxy.luajn.tutorial.Tutorial' + id

        dependsOn compileJava
        dependsOn project(':template').tasks.pniCompile
        dependsOn project(':tutorial-template').tasks.pniCompileTutorial
    }
}

project(':unittest') {
    dependencies {
        implementation 'io.vproxy:pni-api-jdk21:' + PNI_API_VERSION
        implementation project(':core')
        testImplementation 'junit:junit:4.13.2'
    }
    task runUnitTest(type: Test) {
        environment("LUA_PATH", project.rootProject.rootDir.getAbsolutePath() + "/core/src/main/lua/?.lua")
        jvmArgs += '-Djava.library.path=' +
                project.rootProject.rootDir.getAbsolutePath() + '/core/src/main/c' +
                File.pathSeparator +
                project.rootProject.rootDir.getAbsolutePath() + '/tutorial/src/main/c' +
                File.pathSeparator +
                System.getenv("LUA_LD")
        include '**/Suite.class'

        dependsOn project(':template').pniCompile
    }

    task runUnitTestNoCompile(type: Test) {
        environment("LUA_PATH", project.rootProject.rootDir.getAbsolutePath() + "/core/src/main/lua/?.lua")
        jvmArgs += '-Djava.library.path=' +
                project.rootProject.rootDir.getAbsolutePath() + '/core/src/main/c' +
                File.pathSeparator +
                System.getenv("LUA_LD")
        include '**/Suite.class'
    }
}

project(':benchmark-template') {
    dependencies {
        implementation 'io.vproxy:pni-api-jdk21:' + PNI_API_VERSION
    }
    compileJava {
        options.compilerArgs += '-parameters'
    }
    task pniCleanBenchmark(type: Exec) {
        workingDir project.rootProject.rootDir.getAbsolutePath() + '/benchmark/src/main/'
        commandLine 'bash', '-c', 'rm -rf c-generated/* && rm -rf generated/*'
    }
    task pniGenerateBenchmark() {
        def workingDir = project.rootProject.rootDir.getAbsolutePath()
        def gen = new io.vproxy.pni.exec.Generator(
            new io.vproxy.pni.exec.CompilerOptions()
                .setClasspath(List.of(
                    workingDir + '/benchmark-template/build/classes/java/main',
                    workingDir + '/template/build/classes/java/main',
                ))
                .setJavaOutputBaseDirectory(workingDir + '/benchmark/src/main/generated')
                .setCOutputDirectory(workingDir + '/benchmark/src/main/c-generated')
                .setFilters(List.of(
                    java.util.regex.Pattern.compile('io\\.vproxy\\.luajn\\.benchmark\\..*')
                ))
        )

        doLast {
            gen.generate()
        }

        dependsOn project(':template').tasks.pniGenerate
        dependsOn compileJava
    }
    task pniCompileBenchmark(type: Exec) {
        workingDir project.rootProject.rootDir.getAbsolutePath() + '/benchmark/src/main/c'
        commandLine './make.sh'

        dependsOn project(':template').tasks.pniCompile
        dependsOn pniGenerateBenchmark
    }
}

project(':benchmark') {
    apply plugin: 'me.champeau.jmh'
    sourceSets {
        main {
            java {
                srcDirs = ['src/main/java', 'src/main/generated']
                destinationDirectory.set(file('build/classes/java/jmh'))
            }
        }
    }
    jmhRunBytecodeGenerator {
        getJvmArgs().addAll(["--enable-preview", "--enable-native-access=ALL-UNNAMED"])
    }
    jmh {
        environment.put("LUA_PATH", project.rootProject.rootDir.getAbsolutePath() + "/core/src/main/lua/?.lua")
        jvmArgs = ['-Djava.library.path=' +
                           project.rootProject.rootDir.getAbsolutePath() + '/core/src/main/c' +
                           File.pathSeparator +
                           project.rootProject.rootDir.getAbsolutePath() + '/benchmark/src/main/c' +
                           File.pathSeparator +
                           System.getenv("LUA_LD")]
    }
    tasks.jmh.dependsOn project(':template').pniCompile
    tasks.jmh.dependsOn project(':benchmark-template').pniCompileBenchmark
    dependencies {
        implementation project(':core')
        implementation 'org.openjdk.jmh:jmh-generator-annprocess:1.37'
    }
}
